--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -8,11 +8,14 @@
 </ion-header>
 
 <ion-content>
-  <ion-item-sliding *ngFor="let contact of contacts">
+  <!-- <ion-item-sliding *ngFor="let contact of contacts">
     <ion-item>
+      <ion-avatar>
+        <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+      </ion-avatar>
       <ion-label>
-        {{ contact.displayName }}
-        <p> {{ contact.phoneNumbers[0] }} </p>
+        {{ contact.prenom }}
+        <p> {{ contact.numero }} </p>
       </ion-label>
     </ion-item>
     <ion-item-options slide="end">
@@ -20,5 +23,27 @@
         <ion-icon name="call" slot="icon-only" ></ion-icon>
       </ion-item-option>
     </ion-item-options>
-  </ion-item-sliding>
+  </ion-item-sliding> -->
+  <ion-button (click)="onAddContact()">Ajouter un contact</ion-button>
+  <ion-item-group>
+    <ion-item-sliding *ngFor="let contact of contacts">
+      <ion-item>
+        <ion-avatar>
+          <img [src]="contact.photo" onerror="this.src='/assets/person.png'">
+        </ion-avatar>
+        <ion-label>
+          <h2>{{ contact.prenom }}  {{ contact.nom }}</h2>
+          <h3> {{ contact.numero }} </h3>
+        </ion-label>
+      </ion-item>
+      <ion-item-options slide="end">
+        <ion-item-option (click)="onUpdateContact(contact)" color="secondary">
+          <ion-icon name="create" ></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="onRemoveContact(contact)" color="medium">
+          <ion-icon  name="trash" ></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-item-group>
 </ion-content>
